# candy-crush-widget

./: Makefile  README.md  pyproject.toml  requirements.txt
src/candy_crush_widget/: __init__.py  cc_colors.py  cc_game_board.py  cc_game_loop.py  cc_game_state.py  cc_movement_rules.py  cc_scoring.py  cc_tile.py  cli.py  initial_tiles.py
src/candy_crush_widget/cc_model/: __init__.py  cc_colors.py  cc_game_board.py  cc_game_factory.py  cc_game_loop.py  cc_game_state.py  cc_match_rules.py  cc_movement_rules.py  cc_scoring.py
src/candy_crush_widget/cc_view/: __init__.py
test/unit/: test_candy_crush_widget.py  test_collapse.py  test_matches.py
